@@ -1,3 +1,12 @@
+2012-05-26  Ilija Kocho  <ilijak@siva.com.mk>
+
+	* tests/nc_test_slave.c: Reduced stack sizes of IDLE, LOAD and TMAIN
+	threads as well as NUM_LOAD_THREADS to 5 (was 10) in order to fit the
+	test for targets with as low as 128KiB RAM.
+	Bug fix: MAX_BUF fixed so that in_buf[] and out_buf[] can accomodate
+	10KiB messages.
+	[ Bugzilla 1001344 ]
+
 2012-03-06  Ilija Kocho  <ilijak@siva.com.mk>
 
     * src/core/tcp_out.c: Fix compiler warning about unused variables.
